release/RestaurentService/smartdelivery-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smartdelivery
  labels:
    name: smartdelivery
    environment: production
    app: smartdelivery
  annotations:
    description: "Namespace for SmartDelivery microservices"
