release/RestaurentService/restaurent-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: restaurent-service
  namespace: smartdelivery
spec:
  selector:
    app: restaurent-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
